--- a/.config/neomutt/box/common/notmuch.conf
+++ b/.config/neomutt/box/common/notmuch.conf
@@ -9,6 +9,7 @@ _SENT"
 
 virtual-mailboxes \
     "MAIN" "notmuch://?query=tag:MAIN" \
+    "HOLD" "notmuch://?query=folder:$my_mail_all_relative_path/.hold" \
     "TRASH" "notmuch://?query=folder:$my_mail_all_relative_path/.trash" \
     "REMOTE" "notmuch://?query=folder:/$my_mail_raw_relative_path\\/.*/"
 
