Add bind for mov'g to hold

--- a/.config/neomutt/box/common/box.conf
+++ b/.config/neomutt/box/common/box.conf
@@ -20,4 +20,9 @@ macro index yx "\
 <save-message>$my_mail_all_absolute_path/.x\
 " "move to global x"
 
+macro index yh "\
+<tag-prefix>\
+<save-message>$my_mail_all_absolute_path/.hold\
+" "hold"
+
 # vim: filetype=neomuttrc foldmethod=marker
