--- a/.config/fdm/config
+++ b/.config/fdm/config
@@ -9,6 +9,7 @@ $raw_dir = "${base_dir}/raw/"
 $path_xyz = "${raw_dir}/xyz"
 $path_eth = "${raw_dir}/eth"
 $path_outlook = "${raw_dir}/outlook"
+$path_gmail = "${raw_dir}/gmail"
 
 account "target"
     maildirs {
@@ -16,8 +17,8 @@ account "target"
         "${path_xyz}/.Sent/"
         "${path_eth}/.INBOX/"
         "${path_eth}/.Skickat/"
-        "${path_outlook}/.INBOX/"
-        "${path_outlook}/.Sent/"
+        "${path_gmail}/.INBOX/"
+        "${path_gmail}/.[Gmail].E-mails enviados/"
     }
 # }}}
 # }}}
