Default to hold for fdm-proc'g

--- a/.config/fdm/config
+++ b/.config/fdm/config
@@ -169,7 +169,7 @@ match
 match
     account "target"
     actions {
-        "keep"
+        "hold"
     }
 
 # vim: filetype=conf foldmethod=marker
