Use |b| for box-related sync-binds

--- a/.config/neomutt/box/specific/eth/specific.conf
+++ b/.config/neomutt/box/specific/eth/specific.conf
@@ -4,7 +4,7 @@ set folder = $my_mail_raw_absolute_path/$my_box_relative_path
 set record = "+.Skickat"
 # }}}
 
-macro index sr "\
+macro index sb "\
 sm\
 <enter-command>set wait_key=no<Return>\
 <shell-escape> mbsync -c "$HOME/.config/mbsync/config" -V ETH<Return>\
