--- a/.config/neomutt/box/specific/multi.conf
+++ b/.config/neomutt/box/specific/multi.conf
@@ -1,9 +1,9 @@
 macro index ca "\
 <enter-command>\
 virtual-mailboxes \
-"_XYZ" "notmuch://?query=folder:/$my_mail_raw_relative_path/xyz/\\..*/" \
-"_OUTLOOK" "notmuch://?query=folder:/$my_mail_raw_relative_path/outlook/\\..*/" \
-"_ETH" "notmuch://?query=folder:/$my_mail_raw_relative_path/eth/\\..*/" \
+\"_XYZ\" \"notmuch://?query=folder:/$my_mail_raw_relative_path/xyz/\\..*/\" \
+\"_OUTLOOK\" \"notmuch://?query=folder:/$my_mail_raw_relative_path/outlook/\\..*/\" \
+\"_ETH\" \"notmuch://?query=folder:/$my_mail_raw_relative_path/eth/\\..*/\" \
 <Return>\
 <check-stats>\
 " "box all"
@@ -11,9 +11,9 @@ virtual-mailboxes \
 macro index cA "\
 <enter-command>\
 unvirtual-mailboxes \
-"notmuch://?query=folder:/$my_mail_raw_relative_path/xyz/\\..*/" \
-"notmuch://?query=folder:/$my_mail_raw_relative_path/outlook/\\..*/" \
-"notmuch://?query=folder:/$my_mail_raw_relative_path/eth/\\..*/" \
+\"notmuch://?query=folder:/$my_mail_raw_relative_path/xyz/\\..*/\" \
+\"notmuch://?query=folder:/$my_mail_raw_relative_path/outlook/\\..*/\" \
+\"notmuch://?query=folder:/$my_mail_raw_relative_path/eth/\\..*/\" \
 <Return>\
 <check-stats>\
 " "unbox all"
@@ -21,7 +21,7 @@ unvirtual-mailboxes \
 macro pager,index sa "\
 sm\
 <enter-command>set wait_key=no<Return>\
-<shell-escape> mbsync -c "$HOME/.config/mbsync/config" ALL<Return>\
+<shell-escape> mbsync -c \"$HOME/.config/mbsync/config\" ALL<Return>\
 <enter-command>set wait_key=yes<Return>\
 ss\
 " "push *-INBOX "
