--- a/.config/neomutt/box/specific/outlook/specific.conf
+++ b/.config/neomutt/box/specific/outlook/specific.conf
@@ -7,7 +7,7 @@ set record = ""  # outlook auto-registers sent mail
 macro index sb "\
 sm\
 <enter-command>set wait_key=no<Return>\
-<shell-escape> mbsync -c "$HOME/.config/mbsync/config" -V OUTLOOK<Return>\
+<shell-escape> mbsync -c \"$HOME/.config/mbsync/config\" -V OUTLOOK<Return>\
 <enter-command>set wait_key=yes<Return>\
 ss\
 " "push to remote"
