Add miss'g quotes

--- a/.config/neomutt/box/specific/xyz/specific.conf
+++ b/.config/neomutt/box/specific/xyz/specific.conf
@@ -1,6 +1,6 @@
 # box {{{
 set my_box_relative_path = "xyz"
-set folder = $my_mail_raw_absolute_path/$my_box_relative_path
+set folder = "$my_mail_raw_absolute_path/$my_box_relative_path"
 set record = ""  # proton auto-registers sent mail
 # }}}
 
