--- a/.config/neomutt/box/specific/eth/specific.conf
+++ b/.config/neomutt/box/specific/eth/specific.conf
@@ -1,6 +1,6 @@
 # box {{{
 set my_box_relative_path = "eth"
-set folder = $my_mail_raw_absolute_path/$my_box_relative_path
+set folder = "$my_mail_raw_absolute_path/$my_box_relative_path"
 set record = "+.Skickat"
 # }}}
 
