Reformat bind.conf

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -23,26 +23,39 @@ bind editor \ck kill-eol
 
 # pager {{{
 # sidebar {{{
-macro pager <Enter> <sidebar-open>l "box-open"
-macro pager <Return> <sidebar-open>l "box-open"
+macro pager <Enter> \
+"<sidebar-open>l" \
+"box-open"
+macro pager <Return> \
+"<sidebar-open>l" \
+"box-open"
 bind pager \cp sidebar-prev
 bind pager \cn sidebar-next
-macro pager \ck "\cp\cp\cp\cp" "box-kkkk"
-macro pager \cj "\cn\cn\cn\cn" "box-jjjj"
+macro pager \ck \
+"\cp\cp\cp\cp" \
+"box-kkkk"
+macro pager \cj \
+"\cn\cn\cn\cn" \
+"box-jjjj"
 
 bind pager cc sidebar-toggle-visible
-macro pager cd "<change-folder>?" "change-box"
+macro pager cd \
+"<change-folder>?" \
+"change-box"
 # }}}
 
-macro pager dD "\
-<purge-message>\
-ss\
-" "delete!"
+macro pager dD \
+"<purge-message>ss" \
+"delete!"
 
 bind pager k previous-line
 bind pager j next-line
-macro pager K kkkk "4k"
-macro pager J jjjj "4j"
+macro pager K \
+"kkkk" \
+"4k"
+macro pager J \
+"jjjj" \
+"4j"
 bind pager g top
 bind pager G bottom
 
@@ -51,7 +64,9 @@ bind pager l next-entry
 bind pager H previous-thread
 bind pager L next-thread
 
-macro pager : "<enter-command>exec " "exec: command"
+macro pager : \
+"<enter-command>exec " \
+"exec: command"
 bind pager ! shell-escape
 bind pager / search
 bind pager n search-next
@@ -63,24 +78,27 @@ bind pager mf forward-message
 bind pager mr reply
 
 # sync {{{
-macro pager sm "\
-<sync-mailbox><Return><check-stats>\
-" "commit mail"
-macro pager sn "\
+macro pager sm \
+"<sync-mailbox><Return><check-stats>" \
+"commit mail"
+macro pager sn \
+"\
 <enter-command>set wait_key=no<Return>\
 <shell-escape>fdm -f "$HOME/.config/fdm/config" fetch<Return>\
 <shell-escape>notmuch new<Return>\
 <enter-command>set wait_key=yes<Return>\
 <check-stats>\
-" "commit notmuch"
+" \
+"commit notmuch"
 
-macro pager ss "\
-sm\
-sn\
-" "commit"
+macro pager ss \
+"smsn" \
+"commit"
 # }}}
 
-macro pager tt <tag-message>h "tag"
+macro pager tt \
+"<tag-message>h" \
+"tag"
 bind pager rr modify-labels
 
 bind pager aa view-attachments
@@ -98,14 +116,24 @@ bind generic <Return> select-entry
 
 bind generic k previous-entry
 bind generic j next-entry
-macro generic K kkkk "4k"
-macro generic J jjjj "4j"
-macro generic u KKKK "16k"
-macro generic d JJJJ "16j"
+macro generic K \
+"kkkk" \
+"4k"
+macro generic J \
+"jjjj" \
+"4j"
+macro generic u \
+"KKKK" \
+"16k"
+macro generic d \
+"JJJJ" \
+"16j"
 bind generic g first-entry
 bind generic G last-entry
 
-macro generic : "<enter-command>exec " "exec: command"
+macro generic : \
+"<enter-command>exec " \
+"exec: command"
 bind generic ! shell-escape
 bind generic / search
 bind generic n search-next
