Use $HOME ist'd of ~

--- a/.config/neomutt/conf/read.conf
+++ b/.config/neomutt/conf/read.conf
@@ -2,6 +2,6 @@ auto_view text/plain text/html
 
 alternative_order text/plain text/* image/*
 
-set header_cache = ~/.cache/neomutt/
+set header_cache = "$HOME/.cache/neomutt/"
 
 # vim: filetype=neomuttrc foldmethod=marker
