--- a/.config/neomutt/conf/start.conf
+++ b/.config/neomutt/conf/start.conf
@@ -2,8 +2,7 @@
 set spool_file = MAIN
 
 # default profile
-startup-hook "\
-source ~/.config/neomutt/box/specific/xyz/specific.conf \
-"
+startup-hook \
+"source $HOME/.config/neomutt/box/specific/xyz/specific.conf"
 
 # vim: filetype=neomuttrc foldmethod=marker
