Use double-quotes for sidebar-divider

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -19,7 +19,7 @@ set narrow_tree = yes  # shorten thread-indicator
 set sidebar_visible = yes
 set sidebar_new_mail_only = no
 set sidebar_width = 19
-set sidebar_divider_char = ' '
+set sidebar_divider_char = " "
 
 set sidebar_format = "\
 %D \
