Separate global def'ns

--- a/.config/neomutt/box/common/compose.conf
+++ b/.config/neomutt/box/common/compose.conf
@@ -1,5 +1,5 @@
 set real_name = "Shengdi 'shc' Chen"
-set signature = "~/.config/neomutt/box/common/common.sig"
+set signature = "$my_conf_neomutt/box/common/common.sig"
 
 # header {{{
 # SOURCE:
