--- a/.config/neomutt/box/specific/multi.conf
+++ b/.config/neomutt/box/specific/multi.conf
@@ -21,7 +21,7 @@ unvirtual-mailboxes \
 macro pager,index sa "\
 sm\
 <enter-command>set wait_key=no<Return>\
-<shell-escape> mbsync -c \"$HOME/.config/mbsync/config\" ALL<Return>\
+<shell-escape> mbsync -c \"$my_conf_root/mbsync/config\" ALL<Return>\
 <enter-command>set wait_key=yes<Return>\
 ss\
 " "push *-INBOX "
