--- a/.config/neomutt/box/specific/outlook/specific.conf
+++ b/.config/neomutt/box/specific/outlook/specific.conf
@@ -7,7 +7,7 @@ set record = ""  # outlook auto-registers sent mail
 macro index sb "\
 sm\
 <enter-command>set wait_key=no<Return>\
-<shell-escape> mbsync -c \"$HOME/.config/mbsync/config\" -V OUTLOOK<Return>\
+<shell-escape> mbsync -c \"$my_conf_root/mbsync/config\" -V OUTLOOK<Return>\
 <enter-command>set wait_key=yes<Return>\
 ss\
 " "push to remote"
@@ -19,7 +19,7 @@ folder:/$my_mail_raw_relative_path\\/$my_box_relative_path/ and \
 " "query box"
 
 # compose {{{
-source "~/.config/neomutt/box/common/compose.conf"
+source "$my_conf_neomutt/box/common/compose.conf"
 
 set my_mail_addr = "shengdi@outlook.de"
 set from = "$my_mail_addr"
