--- a/.config/neomutt/box/specific/xyz/auto.conf
+++ b/.config/neomutt/box/specific/xyz/auto.conf
@@ -1,4 +1,4 @@
-set my_conf = "~/.config/neomutt/box/specific/xyz/specific.conf"
+set my_conf = "$my_conf_neomutt/box/specific/xyz/specific.conf"
 
 folder-hook $my_mail_raw_relative_path/xyz "source $my_conf"
 folder-hook _XYZ "source $my_conf"
