--- a/.config/neomutt/box/specific/eth/auto.conf
+++ b/.config/neomutt/box/specific/eth/auto.conf
@@ -1,4 +1,4 @@
-set my_conf = "~/.config/neomutt/box/specific/eth/specific.conf"
+set my_conf = "$my_conf_neomutt/box/specific/eth/specific.conf"
 
 folder-hook $my_mail_raw_relative_path/eth "source $my_conf"
 folder-hook _ETH "source $my_conf"
