--- a/.config/neomutt/box/specific/outlook/auto.conf
+++ b/.config/neomutt/box/specific/outlook/auto.conf
@@ -1,4 +1,4 @@
-set my_conf = "~/.config/neomutt/box/specific/outlook/specific.conf"
+set my_conf = "$my_conf_neomutt/box/specific/outlook/specific.conf"
 
 folder-hook $my_mail_raw_relative_path/outlook "source $my_conf"
 folder-hook _OUTLOOK "source $my_conf"
