--- a/.config/fdm/config
+++ b/.config/fdm/config
@@ -144,6 +144,7 @@ match
     "^From:.*@esrtech\.io" in headers or
     "^From:.*@watts\.com" in headers or
     "^From:.*@myfolio\.im" in headers or
+    "^From:.*@wettbewerbeundgewinnspiele\.ch" in headers or
     #
     "^From:.*@email\.wolfram\.com" in headers or
     "^From:.*@go\.mathworks\.com" in headers or
