--- a/.config/fdm/config
+++ b/.config/fdm/config
@@ -15,6 +15,8 @@ account "target"
         "${path_xyz}/.Sent/"
         "${path_eth}/.INBOX/"
         "${path_eth}/.Skickat/"
+        "${path_outlook}/.INBOX/"
+        "${path_outlook}/.Sent/"
         "${path_gmail}/.INBOX/"
         "${path_gmail}/.[Gmail].E-mails enviados/"
     }
