--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -9,7 +9,7 @@ set menu_context = 2
 # automatically load stats at startup
 set mail_check_stats = yes
 
-set date_format = "%Y.%b.%d-%T"
+set date_format = "%Y.%m.%d-%T|%z"
 
 # for thread & attachment trees
 set ascii_chars = yes
@@ -110,7 +110,7 @@ subject date from to cc
 # }}}
 
 set pager_format = "\
-(%C, #%m=/%b/)\
+[%b]: #%C/%m\
  %* \
 [%zt]  %P\
 "
