Show message-id as header

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -102,7 +102,7 @@ cat -s \
 ignore *
 unignore \
 subject date from to cc \
-X-Mailer Mail-System-Version User-Agent Content-Language
+Message-ID X-Mailer Mail-System-Version User-Agent Content-Language
 
 unhdr_order *
 hdr_order \
