Only show subject in statusline of |pager|-mode

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -109,11 +109,7 @@ hdr_order \
 subject date from to cc
 # }}}
 
-set pager_format = "\
-[%b]: #%C/%m\
- %* \
-[%zt]  %P\
-"
+set pager_format = "%s"
 # }}}
 
 # compose {{{
