--- a/.config/fdm/config
+++ b/.config/fdm/config
@@ -67,6 +67,7 @@ match
     "^From:.*[\\s<]no-reply@.*\.proton\.me" in headers or
     "^From:.*[\\s<]contact@protonmail\.com" in headers or
     "^From:.*@ipvanish\.com" in headers or
+    "^From:.*@ifttt\.com" in headers or
     #
     "^From:.*[\\s<]no-reply@accounts\.google\.com" in headers or
     "^From:.*[\\s<]cloud-noreply@google\.com" in headers or
@@ -100,6 +101,7 @@ match
     "^From:.*[\\s<]galaxus@community\.galaxus\.ch" in headers or
     "^From:.*[\\s<]productnews@galaxus\.ch" in headers or
     "^From:.*[\\s<]resale@galaxus\.ch" in headers or
+    "^From:.*[\\s<]resale@notifications\.galaxus\.ch" in headers or
     "^From:.*[\\s<]ux@digitecgalaxus\.ch" in headers or
     #
     "^From:.*[\\s<]no-reply@piazza\.com" in headers or
@@ -113,13 +115,16 @@ match
     "^From:.*[\\s<]noreply@moodle-app2\.let\.ethz\.ch" in headers or
     "^From:.*[\\s<]treffpunkt@news\.ethz\.ch" in headers or
     "^From:.*[\\s<]MicrosoftExchange329e71ec88ae4615bbc36ab6ce41109e@intern\.ethz\.ch" in headers or
+    "^From:.*[\\s<]descil@ethz\.ch" in headers or
     "^From:.*[\\s<]mathbib@math\.ethz\.ch" in headers or
     "^From:.*[\\s<]evasys@let\.ethz\.ch" in headers or
     "^From:.*[\\s<]exchange@ethz\.ch" in headers or
     "^From:.*[\\s<]president@ethz\.ch" in headers or
     "^From:.*[\\s<]sgu_training@ethz\.ch" in headers or
     "^From:.*[\\s<]didaktischeausbildung@ethz\.ch" in headers or
+    "^From:.*[\\s<]entrepreneurship@ethz\.ch" in headers or
     "^From:.*@hk\.ethz\.ch" in headers or
+    "^From:.*@library\.ethz\.ch" in headers or
     "^From:.*@sts\.ethz\.ch" in headers or
     "^From:.*@sl\.ethz\.ch" in headers
     #
@@ -137,6 +142,7 @@ match
 # direct deletion {{{
 # spam
 match
+    # bad domain
     "^From:.*@.*indiaplays\.com.*" in headers or
     "^From:.*@.*kraftangan\.gov\.my.*" in headers or
     "^From:.*@.*kollect\.ai.*" in headers or
@@ -156,6 +162,7 @@ match
     "^From:.*@.*didareshop\.com.*" in headers or
     "^From:.*@.*catpro\.io.*" in headers or
     "^From:.*@.*mozart\.livingopera\.org.*" in headers or
+    "^From:.*@fr\.redoutes\.com" in headers or
     "^From:.*@vr7uallms\.com" in headers or
     "^From:.*@caboardroom\.com\.sg" in headers or
     "^From:.*@esrtech\.io" in headers or
@@ -169,6 +176,19 @@ match
     "^From:.*@neugiab\.com" in headers or
     "^From:.*@ac-creteil\.fr" in headers or
     "^From:.*@getaventura\.com" in headers or
+    "^From:.*@cootel\.com\.ni" in headers or
+    "^From:.*@smart\.com\.ro" in headers or
+    "^From:.*@itlgt\.com" in headers or
+    "^From:.*@binafna\.huawei\.uk\.net" in headers or
+    "^From:.*@darecky\.pl" in headers or
+    "^From:.*@montenegromade\.com" in headers or
+    "^From:.*@divaniesofa\.ro" in headers or
+    "^From:.*@easytrott\.fr" in headers or
+    "^From:.*@kiswel\.com" in headers or
+    "^From:.*@vmiconic\.co\.tz" in headers or
+    "^From:.*@citizenpath\.com" in headers or
+    "^From:.*@doctorgenius\.com" in headers or
+    "^From:.*@upscheckoutrotator\.com" in headers or
     #
     "^From:.*@email\.wolfram\.com" in headers or
     "^From:.*@go\.mathworks\.com" in headers or
@@ -177,6 +197,7 @@ match
     "^From:.*[\\s<]no-reply@flipboard\.com" in headers or
     "^From:.*[\\s<]support@help\.instapaper\.com" in headers or
     #
+    "^From:.*[\\s<]nhatnguyen31101993@gmail\.com" in headers or
     "^From:.*[\\s<]LYRIS-e\.m-2023\.10\.05-06\.16\.06@shadovn\.com" in headers or
     "^From:.*[\\s<]postmaster@smtp\.assessment\.gr" in headers or
     "^From:.*[\\s<]support@affiligate\.com" in headers or
