feat(bind): group-reply

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -76,6 +76,8 @@ bind pager mm mail
 bind pager mb bounce-message
 bind pager mf forward-message
 bind pager mr reply
+bind pager mRR group-chat-reply  # [b]cc preserved
+bind pager mRT group-reply  # all non-sender(s) as cc
 
 # sync {{{
 macro pager sm \
@@ -279,6 +281,8 @@ bind index mm mail
 bind index md recall-message
 
 bind index mr reply
+bind index mRR group-chat-reply  # [b]cc preserved
+bind index mRT group-reply  # all non-sender(s) as cc
 bind index mb bounce-message
 bind index mf forward-message
 # }}}
