feat(neomutt): do NOT auto verify-sig

--- a/.config/neomutt/conf/read.conf
+++ b/.config/neomutt/conf/read.conf
@@ -4,4 +4,9 @@ alternative_order text/plain text/* image/*
 
 set header_cache = "$HOME/.cache/neomutt/"
 
+# REF:
+#   https://github.com/neomutt/neomutt/issues/1014
+#   https://man.archlinux.org/man/extra/neomutt/neomuttrc.5.en#crypt_verify_sig
+set crypt_verify_sig = "ask-no"
+
 # vim: filetype=neomuttrc foldmethod=marker
