feat(mutt-bind): add bind for mov'g to trash

--- a/.config/neomutt/box/common/box.conf
+++ b/.config/neomutt/box/common/box.conf
@@ -20,13 +20,20 @@ macro index yx "\
 <save-message>$my_mail_all_absolute_path/.x\
 <Return>\
 ss\
-" "x"
+" "move to all/x"
 
 macro index yh "\
 <tag-prefix>\
 <save-message>$my_mail_all_absolute_path/.hold\
 <Return>\
 ss\
-" "hold"
+" "move to all/hold"
+
+macro index yt "\
+<tag-prefix>\
+<save-message>$my_mail_all_absolute_path/.trash\
+<Return>\
+ss\
+" "move to all/trash"
 
 # vim: filetype=neomuttrc foldmethod=marker
