--- a/.config/fdm/config
+++ b/.config/fdm/config
@@ -15,18 +15,19 @@ $path_xyz = "${raw_dir}/xyz"
 $path_eth = "${raw_dir}/eth"
 $path_outlook = "${raw_dir}/outlook"
 $path_gmail = "${raw_dir}/gmail"
-account "acc_targets"
+account "acc_raw_sent"
+    maildirs {
+        "${path_xyz}/.Sent/"
+        "${path_eth}/.Skickat/"
+        "${path_outlook}/.Sent/"
+        "${path_gmail}/.[Gmail].E-mails enviados/"
+    }
+account "acc_raw_inbox"
     maildirs {
         "${path_xyz}/.INBOX/"
-        "${path_xyz}/.Sent/"
         "${path_eth}/.INBOX/"
-        "${path_eth}/.Skickat/"
         "${path_outlook}/.INBOX/"
-        "${path_outlook}/.Sent/"
-        "${path_outlook}/.Junk/"
         "${path_gmail}/.INBOX/"
-        "${path_gmail}/.[Gmail].E-mails enviados/"
-        "${path_gmail}/.[Gmail].Spam/"
     }
 # }}}
 
@@ -247,15 +248,9 @@ match
 
 match
     accounts {
-        "acc_targets"
-    }
-    actions {
-        "hold"
-    }
-
-match
-    accounts {
         "acc_hold"
+        "acc_raw_sent"
+        "acc_raw_inbox"
     }
     actions {
         "keep"
