--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -314,6 +314,10 @@ bind compose cw rename-attachment
 bind compose dd detach-file
 bind compose < move-up
 bind compose > move-down
+
+macro compose "sS" \
+"<enter-command>exec send-message" \
+"send"
 # }}}
 
 # (file-)browser {{{
