chore(mutt-bind): rebind sync-related

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -80,22 +80,21 @@ bind pager mRR group-chat-reply  # [b]cc preserved
 bind pager mRT group-reply  # all non-sender(s) as cc
 
 # sync {{{
-macro pager sm \
-"<sync-mailbox><Return><check-stats>" \
-"commit mail"
-macro pager sn \
-"\
+macro pager sm "\
+<sync-mailbox><Return><check-stats><Return>\
+" "commit mail"
+macro pager sn "\
 <enter-command>set wait_key=no<Return>\
-<shell-escape>fdm -f "$HOME/.config/fdm/config" fetch<Return>\
+<shell-escape>fdm -f \"$HOME/.config/fdm/config\" fetch<Return>\
 <shell-escape>notmuch new<Return>\
 <enter-command>set wait_key=yes<Return>\
-<check-stats>\
-" \
-"commit notmuch"
+" "commit notmuch"
 
-macro pager ss \
-"smsn" \
-"commit"
+macro pager ss "\
+sm\
+sn\
+sm\
+" "commit"
 # }}}
 
 macro pager tt \
@@ -154,19 +153,19 @@ bind index L next-thread
 
 # sync {{{
 macro index sm "\
-<sync-mailbox><Return><check-stats>\
+<sync-mailbox><Return><check-stats><Return>\
 " "commit mail"
 macro index sn "\
 <enter-command>set wait_key=no<Return>\
-<shell-escape>fdm -f "$HOME/.config/fdm/config" fetch<Return>\
+<shell-escape>fdm -f \"$HOME/.config/fdm/config\" fetch<Return>\
 <shell-escape>notmuch new<Return>\
 <enter-command>set wait_key=yes<Return>\
-<check-stats>\
 " "commit notmuch"
 
 macro index ss "\
 sm\
 sn\
+sm\
 " "commit"
 # }}}
 
