--- a/.config/fdm/config
+++ b/.config/fdm/config
@@ -15,6 +15,13 @@ $path_xyz = "${raw_dir}/xyz"
 $path_eth = "${raw_dir}/eth"
 $path_outlook = "${raw_dir}/outlook"
 $path_gmail = "${raw_dir}/gmail"
+account "acc_raw_inbox"
+    maildirs {
+        "${path_xyz}/.INBOX/"
+        "${path_eth}/.INBOX/"
+        "${path_outlook}/.INBOX/"
+        "${path_gmail}/.INBOX/"
+    }
 account "acc_raw_sent"
     maildirs {
         "${path_xyz}/.Sent/"
@@ -22,12 +29,14 @@ account "acc_raw_sent"
         "${path_outlook}/.Sent/"
         "${path_gmail}/.[Gmail].E-mails enviados/"
     }
-account "acc_raw_inbox"
+# other folders that we would like fdm to monitor
+account "acc_raw_misc"
     maildirs {
-        "${path_xyz}/.INBOX/"
-        "${path_eth}/.INBOX/"
-        "${path_outlook}/.INBOX/"
-        "${path_gmail}/.INBOX/"
+        "${path_xyz}/.Spam/"
+        "${path_xyz}/.Trash/"
+        "${path_outlook}/.Junk/"
+        "${path_outlook}/.Deleted/"
+        "${path_gmail}/.[Gmail].Spam/"
     }
 # }}}
 
@@ -249,8 +258,9 @@ match
 match
     accounts {
         "acc_hold"
-        "acc_raw_sent"
         "acc_raw_inbox"
+        "acc_raw_sent"
+        "acc_raw_misc"
     }
     actions {
         "keep"
