--- a/raw/.config/neomutt/box/specific/eth/specific.conf
+++ b/raw/.config/neomutt/box/specific/eth/specific.conf
@@ -1,7 +1,7 @@
 # box {{{
 set my_box_relative_path = "eth"
 set folder = "$my_mail_raw_absolute_path/$my_box_relative_path"
-set record = "+.Skickat"
+set record = "+.Sent Items"
 # }}}
 
 macro index sb "\
