feat(mutt): use our shiny new scripts

--- a/.config/neomutt/box/specific/eth/specific.conf
+++ b/.config/neomutt/box/specific/eth/specific.conf
@@ -25,7 +25,7 @@ set my_mail_addr = "shenchen@ethz.ch"
 set from = "$my_mail_addr"
 my_hdr Reply-To: "$my_mail_addr"
 
-set sendmail = "msmtp -a eth"
+set sendmail = "$my_conf_dmail/msmtp.sh --account eth"
 # }}}
 
 # vim: filetype=neomuttrc foldmethod=marker
