--- a/.config/neomutt/box/specific/outlook/specific.conf
+++ b/.config/neomutt/box/specific/outlook/specific.conf
@@ -25,7 +25,7 @@ set my_mail_addr = "shengdi@outlook.de"
 set from = "$my_mail_addr"
 my_hdr Reply-To: "$my_mail_addr"
 
-set sendmail = "msmtp -a outlook"
+set sendmail = "$my_conf_dmail/msmtp.sh --account outlook"
 # }}}
 
 # vim: filetype=neomuttrc foldmethod=marker
