--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -85,8 +85,7 @@ macro pager sm "\
 " "commit mail"
 macro pager sn "\
 <enter-command>set wait_key=no<Return>\
-<shell-escape>fdm -f \"$HOME/.config/fdm/config\" fetch<Return>\
-<shell-escape>notmuch new<Return>\
+<shell-escape>"$my_conf_dmail/work.sh" post<Return>\
 <enter-command>set wait_key=yes<Return>\
 " "commit notmuch"
 
@@ -157,8 +156,7 @@ macro index sm "\
 " "commit mail"
 macro index sn "\
 <enter-command>set wait_key=no<Return>\
-<shell-escape>fdm -f \"$HOME/.config/fdm/config\" fetch<Return>\
-<shell-escape>notmuch new<Return>\
+<shell-escape>"$my_conf_dmail/work.sh" post<Return>\
 <enter-command>set wait_key=yes<Return>\
 " "commit notmuch"
 
