--- a/.config/neomutt/box/specific/multi.conf
+++ b/.config/neomutt/box/specific/multi.conf
@@ -21,9 +21,9 @@ unvirtual-mailboxes \
 macro pager,index sa "\
 sm\
 <enter-command>set wait_key=no<Return>\
-<shell-escape> mbsync -c \"$my_conf_root/mbsync/config\" ALL<Return>\
+<shell-escape>clear<Return>\
+<shell-escape>"$my_conf_dmail/work.sh" pipe<Return>\
 <enter-command>set wait_key=yes<Return>\
-ss\
 " "push *-INBOX "
 
 # vim: filetype=neomuttrc foldmethod=marker
