--- a/.config/neomutt/box/specific/xyz/specific.conf
+++ b/.config/neomutt/box/specific/xyz/specific.conf
@@ -25,7 +25,7 @@ set my_mail_addr = "me@shengdichen.xyz"
 set from = "$my_mail_addr"
 my_hdr Reply-To: "$my_mail_addr"
 
-set sendmail = "msmtp -a xyz"
+set sendmail = "$my_conf_dmail/msmtp.sh --account xyz"
 # }}}
 
 # vim: filetype=neomuttrc foldmethod=marker
