--- a/.config/neomutt/definition.conf
+++ b/.config/neomutt/definition.conf
@@ -1,4 +1,6 @@
 set my_conf_root = "$HOME/.config/"
 set my_conf_neomutt = "$my_conf_root/neomutt/"
 
+set my_conf_dmail = "~/dot/dot/d_mail/src"
+
 # vim: filetype=neomuttrc foldmethod=marker
