--- a/raw/.config/fdm/config
+++ b/raw/.config/fdm/config
@@ -154,30 +154,26 @@ match
         "trash"
     }
 # }}}
-
-# direct deletion {{{
-# spam
 match
-    # 1. (bad domain, all accounts)
-    "^From:.*@.*indiaplays\.com.*" in headers or
-    "^From:.*@.*kraftangan\.gov\.my.*" in headers or
-    "^From:.*@.*kollect\.ai.*" in headers or
-    "^From:.*@.*transfiriendo\.com.*" in headers or
-    "^From:.*@.*fibrasil\.com.*" in headers or
-    "^From:.*@.*norton\.com.*" in headers or
-    "^From:.*@.*novaorion\.com.*" in headers or
-    "^From:.*@.*apparelsite\.net.*" in headers or
-    "^From:.*@.*farmleap\.com.*" in headers or
-    "^From:.*@.*yfhuorwa\.com.*" in headers or
-    "^From:.*@.*moneypeny\.fr.*" in headers or
-    "^From:.*@.*ronquilloassociates\.com.*" in headers or
-    "^From:.*@.*preapp1003\.com.*" in headers or
-    "^From:.*@.*magnusmonitors\.com.*" in headers or
-    "^From:.*@.*oasdehe\.com.*" in headers or
-    "^From:.*@.*sion\.ais\.ne\.jp.*" in headers or
-    "^From:.*@.*didareshop\.com.*" in headers or
-    "^From:.*@.*catpro\.io.*" in headers or
-    "^From:.*@.*mozart\.livingopera\.org.*" in headers or
+    "^From:.*@indiaplays\.com" in headers or
+    "^From:.*@kraftangan\.gov\.my" in headers or
+    "^From:.*@kollect\.ai" in headers or
+    "^From:.*@transfiriendo\.com" in headers or
+    "^From:.*@fibrasil\.com" in headers or
+    "^From:.*@norton\.com" in headers or
+    "^From:.*@novaorion\.com" in headers or
+    "^From:.*@apparelsite\.net" in headers or
+    "^From:.*@farmleap\.com" in headers or
+    "^From:.*@yfhuorwa\.com" in headers or
+    "^From:.*@moneypeny\.fr" in headers or
+    "^From:.*@ronquilloassociates\.com" in headers or
+    "^From:.*@preapp1003\.com" in headers or
+    "^From:.*@magnusmonitors\.com" in headers or
+    "^From:.*@oasdehe\.com" in headers or
+    "^From:.*@sion\.ais\.ne\.jp" in headers or
+    "^From:.*@didareshop\.com" in headers or
+    "^From:.*@catpro\.io" in headers or
+    "^From:.*@mozart\.livingopera\.org" in headers or
     "^From:.*@fr\.redoutes\.com" in headers or
     "^From:.*@vr7uallms\.com" in headers or
     "^From:.*@caboardroom\.com\.sg" in headers or
@@ -260,36 +256,33 @@ match
     "^From:.*@steibel\.be" in headers or
     "^From:.*@tisknise\.cz" in headers or
     "^From:.*@campaign\.eventbrite\.com" in headers or
-    # 2. (bad subdomain, all accounts)
-    "^From:.*@email\.wolfram\.com" in headers or
-    "^From:.*@go\.mathworks\.com" in headers or
-    # 3. (good domain, bad account)
-    "^From:.*[\\s<]okabzne@hotmail\.com" in headers or
-    "^From:.*[\\s<]diversity@ethz\.ch" in headers or
-    "^From:.*[\\s<]gastro@news\.ethz\.ch" in headers or
+    "^From:.*@insistglobal\.com" in headers or
+    "^From:.*@montagnes-sciences\.fr" in headers or
+    "^From:.*@kenzahn\.com" in headers or
+    "^From:.*@insistglobal\.com" in headers or
+    "^From:.*@affiligate\.com" in headers or
+    "^From:.*@yellowdig\.net" in headers or
+    "^From:.*@smtp\.assessment\.gr" in headers or
+    "^From:.*@shadovn\.com" in headers or
     "^From:.*[\\s<]no-reply@flipboard\.com" in headers or
     "^From:.*[\\s<]support@help\.instapaper\.com" in headers or
-    "^From:.*[\\s<]nhatnguyen31101993@gmail\.com" in headers or
-    "^From:.*[\\s<]LYRIS-e\.m-2023\.10\.05-06\.16\.06@shadovn\.com" in headers or
-    "^From:.*[\\s<]postmaster@smtp\.assessment\.gr" in headers or
-    "^From:.*[\\s<]support@affiligate\.com" in headers or
-    "^From:.*[\\s<]dw-1298858contact@insistglobal\.com" in headers or
-    "^From:.*[\\s<]info@montagnes-sciences\.fr" in headers or
-    "^From:.*[\\s<]BDiduxHIFF@yellowdig\.net" in headers or
-    "^From:.*[\\s<]ecotto@kenzahn\.com" in headers or
-    "^From:.*[\\s<]Ashish\.Biswas@icar\.gov\.in" in headers or
+    "^From:.*@email\.wolfram\.com" in headers or
+    "^From:.*@go\.mathworks\.com" in headers or
+    "^From:.*[\\s<]diversity@ethz\.ch" in headers or
+    "^From:.*[\\s<]gastro@news\.ethz\.ch" in headers or
+    "^From:.*[\\s<]okabzne@hotmail\.com" in headers or
     "^From:.*[\\s<]davidcostapro@gmail\.com" in headers or
     "^From:.*[\\s<]ngoctran071113@gmail\.com" in headers or
+    "^From:.*[\\s<]nhatnguyen31101993@gmail\.com" in headers or
     "^From:.*[\\s<]FreegsmfsdsFDFDmehdii49@gmx\.de" in headers or
-    #
+    "^From:.*[\\s<]Ashish\.Biswas@icar\.gov\.in" in headers or
     "^From:.*[\\s<]Fehler bei der Lieferadresse" in headers
-    #
+
     actions {
         "delete"
     }
 # }}}
 # }}}
-
 match
     accounts {
         "acc_hold"
