--- a/raw/.config/fdm/config
+++ b/raw/.config/fdm/config
@@ -2,10 +2,8 @@
 set no-received
 
 # setup {{{
-$base_dir = "%h/.local/share/mail"
-$all_dir = "${base_dir}/all"
-$trash_dir = "${all_dir}/.trash"
-$hold_dir = "${all_dir}/.hold"
+$trash_dir = "/home/main/.local/share/mail/all/.trash"
+$hold_dir = "/home/main/.local/share/mail/all/.hold"
 
 # account {{{
 account "acc_hold"
@@ -13,11 +11,10 @@ account "acc_hold"
         "${hold_dir}"
     }
 
-$raw_dir = "${base_dir}/raw"
-$path_xyz = "${raw_dir}/xyz"
-$path_eth = "${raw_dir}/eth"
-$path_outlook = "${raw_dir}/outlook"
-$path_gmail = "${raw_dir}/gmail"
+$path_xyz = "/home/main/.local/share/mail/raw/xyz"
+$path_eth = "/home/main/.local/share/mail/raw/eth"
+$path_outlook = "/home/main/.local/share/mail/raw/outlook"
+$path_gmail = "/home/main/.local/share/mail/raw/gmail"
 account "acc_raw_inbox"
     maildirs {
         "${path_xyz}/.INBOX"
