--- a/raw/.config/fdm/config
+++ b/raw/.config/fdm/config
@@ -17,17 +17,17 @@ $path_outlook = "/home/main/.local/share/mail/raw/outlook"
 $path_gmail = "/home/main/.local/share/mail/raw/gmail"
 account "acc_raw_inbox"
     maildirs {
-        "${path_xyz}/.INBOX"
-        "${path_eth}/.INBOX"
-        "${path_outlook}/.INBOX"
-        "${path_gmail}/.INBOX"
+        "/home/main/.local/share/mail/raw/xyz/.INBOX"
+        "/home/main/.local/share/mail/raw/eth/.INBOX"
+        "/home/main/.local/share/mail/raw/outlook/.INBOX"
+        "/home/main/.local/share/mail/raw/gmail/.INBOX"
     }
 account "acc_raw_sent"
     maildirs {
-        "${path_xyz}/.Sent"
-        "${path_eth}/.Sent Items"
-        "${path_outlook}/.Sent"
-        "${path_gmail}/.[Gmail].E-mails enviados"
+        "/home/main/.local/share/mail/raw/xyz/.Sent"
+        "/home/main/.local/share/mail/raw/eth/.Sent Items"
+        "/home/main/.local/share/mail/raw/outlook/.Sent"
+        "/home/main/.local/share/mail/raw/gmail/.[Gmail].E-mails enviados"
     }
 # other folders that we would like fdm to monitor
 account "acc_raw_misc"
